# dll-diagnostics

./: LICENSE  README.md  build-detours.py  build-helpers.py  build-images.py  setup.py
detours/: CMakeLists.txt  conanfile.txt  dlldiag-detour-loadlibrary.cpp
detours/common/: caller.cpp  caller.h  environment.cpp  environment.h  log.cpp  log.h  strings.cpp  strings.h
dlldiag/: __init__.py  __main__.py  main.py
dlldiag/common/: CommonErrors.py  DetourLibrary.py  FileIO.py  HelperProcess.py  ModuleHeader.py  OutputFormatting.py  StringUtils.py  WindowsApi.py  WindowsDebugger.py  __init__.py
dlldiag/subcommands/: __init__.py  deps.py  docker.py  graph.py  trace.py
helpers/: CMakeLists.txt  dlldiag-helper-loadlibrary.cpp
